<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_pickup_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/activity_margin"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm_pickup_location"
            android:textSize="18sp"
            android:textColor="@color/dark_Blue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:background="@color/dark_Blue"/>

        <TextView
            android:id="@+id/txt_pickup_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/address_temp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:textSize="16sp"
            android:textColor="@color/dark_Blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/confirm_pickup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/confirm_pickup"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>