<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/driver_info_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/light_Blue">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@color/light_Blue"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_drive_eta_24"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/driver_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="120dp"
                        android:src="@drawable/ic_baseline_account_circle_24"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/txt_driver_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/car_type_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txt_car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/car_number_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/light_Blue"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/activity_margin"
                android:paddingBottom="8dp">



                <TextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_star_24"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="4.5"
                    android:textColor="@color/white" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/ascii_square"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/driver_name_example"
                    android:textColor="@color/white"
                    android:textSize="14sp" />



            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@color/light_Blue"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp"
            android:weightSum="12">

            <ImageView
                android:id="@+id/call_driver"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_call_24"/>

            <EditText
                android:id="@+id/driver_note"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:hint="A Note for Collection?"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textMultiLine"
                android:layout_weight="10"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/call_driver"/>

            <ImageView
                android:id="@+id/send_note"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_keyboard_return_24"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>